--- a/style.css
+++ b/style.css
@@ -4,15 +4,21 @@
     box-sizing: border-box;
 }
 
+
+body{
+
+    height: 100vw;
+    overflow-y: scroll;
+    overflow-x: hidden;
+}
 .fundo{
     background-image: url(./img/fundo-cinza-suave-com-alta-qualidade_53876-104894.avif);
-    background-size: cover;
-    background-position: center;
+    background-size: 100% 100%;
     background-repeat: no-repeat;
-    width: 100%;
-    height: 100vh;
-    margin: 0;
-    padding: 0;
+    width: 300%;
+    height: 300vb;
+    
+    
 }
 
 .quadradoprincipal{
@@ -31,4 +37,49 @@
     align-items: center;
     z-index: 1;
     
+}
+
+.barradepesquisa{
+    background-color: #D3D3D3;
+    display: flex;
+    align-items: center;
+    top: 300px;
+    width: 650px;
+    height: 50px;
+    border-radius: 30px;
+    position: absolute;
+    transform: translate(50% , 50%);
+    z-index: 2;
+}
+.lupa{
+    position: absolute;
+    left: 0;
+     transform: scale(0.10);
+}
+.titulo{
+    position: relative;
+    top: -20px;
+    transform: scale(1.5);
+
+}
+
+.linhavertical{
+    transform: translate(-50%);
+    width: 1px; 
+    height: 70%;
+    background-color: #000; 
+    position: absolute; 
+    left: 50%;
+    bottom: -100%;
+    float: right;
+}
+.estrelaBotao1{
+    position: relative;
+    background-color: transparent;
+    border: none;
+    padding: 0;
+    font-size: 24px;
+    cursor: pointer;
+    outline: none;
+    transition: color 0.3s;
 }
