--- a/style.css
+++ b/style.css
@@ -7,22 +7,23 @@
 
 body{
 
-    height: 100vw;
+    height: 80vw;
     overflow-y: scroll;
     overflow-x: hidden;
+    max-height: 100%;
+    margin: 0 auto;
 }
 .fundo{
-    background-image: url(./img/fundo-cinza-suave-com-alta-qualidade_53876-104894.avif);
+    background: linear-gradient(white , black);
     background-size: 100% 100%;
     background-repeat: no-repeat;
     width: 300%;
     height: 300vb;
-    
-    
+
 }
 
 .quadradoprincipal{
-    background-color: #4F4F4F;
+    background-color:black;
     width: 900px;
     height: 290px;
     border-radius: 15px;
@@ -40,26 +41,29 @@ body{
 }
 
 .barradepesquisa{
-    background-color: #D3D3D3;
+    background-color: white;
     display: flex;
     align-items: center;
     top: 300px;
     width: 650px;
     height: 50px;
-    border-radius: 30px;
+    border-radius: 10px;
     position: absolute;
     transform: translate(50% , 50%);
     z-index: 2;
+    right: 950px;
 }
 .lupa{
     position: absolute;
     left: 0;
-     transform: scale(0.10);
+     transform: scale(0.03);
+     right: 480%;
+     z-index: 3;
 }
 .titulo{
     position: relative;
     top: -20px;
-    transform: scale(1.5);
+    transform: scale(1.0);
 
 }
 
@@ -69,17 +73,26 @@ body{
     height: 70%;
     background-color: #000; 
     position: absolute; 
-    left: 50%;
+    left:98%;
     bottom: -100%;
-    float: right;
+    right: 0;
 }
-.estrelaBotao1{
-    position: relative;
-    background-color: transparent;
-    border: none;
-    padding: 0;
-    font-size: 24px;
+.botaoEstrela{
+    text-align: center;
     cursor: pointer;
-    outline: none;
-    transition: color 0.3s;
+    transform: translate(10%);
+    right: 0;
+    top: 100px;
 }
+
+/*REMOVE A BORDA AO REDOR DO TEXTO*/
+input[type="text"] {
+    border: none;
+    margin: 0; 
+    padding: 0; 
+    outline: none;
+    height: 20px;
+    width: 300px;
+    transform: translate(15%);
+}
+
