--- a/style.css
+++ b/style.css
@@ -6,16 +6,10 @@
 
 
 body{
-
-    height: 80vw;
-    overflow-y: scroll;
-    overflow-x: hidden;
-    max-height: 100%;
-    margin: 0 auto;
+   overflow: hidden;
 }
 .fundo{
-    background: linear-gradient(white , black);
-    background-size: 100% 100%;
+    background: linear-gradient(#a404b2 , #00fff8 100%);
     background-repeat: no-repeat;
     width: 300%;
     height: 300vb;
@@ -23,13 +17,13 @@ body{
 }
 
 .quadradoprincipal{
-    background-color:black;
+    background: linear-gradient(#9dffff , #f587ff);
     width: 900px;
     height: 290px;
     border-radius: 15px;
     margin: 0 auto;
     position: absolute;
-    top: 110px;
+    top: 80px;
     bottom: 0;
     left: 0;
     right: 0;
@@ -44,45 +38,48 @@ body{
     background-color: white;
     display: flex;
     align-items: center;
-    top: 300px;
+    top: 270px;
     width: 650px;
     height: 50px;
     border-radius: 10px;
     position: absolute;
     transform: translate(50% , 50%);
     z-index: 2;
-    right: 950px;
+    right: 645px;
 }
 .lupa{
     position: absolute;
     left: 0;
-     transform: scale(0.03);
+     transform: scale(0.05);
      right: 480%;
-     z-index: 3;
+     z-index: 5;
 }
 .titulo{
     position: relative;
-    top: -20px;
+    top: -15px;
     transform: scale(1.0);
 
 }
 
 .linhavertical{
     transform: translate(-50%);
+    top: 10%;
     width: 1px; 
     height: 70%;
     background-color: #000; 
     position: absolute; 
-    left:98%;
+    left:95%;
     bottom: -100%;
     right: 0;
 }
-.botaoEstrela{
+.botao{
     text-align: center;
     cursor: pointer;
-    transform: translate(10%);
-    right: 0;
+    right: 0%;
     top: 100px;
+    transform: scale(0.25);
+    size: 100%;
+    margin-left: -84px;
 }
 
 /*REMOVE A BORDA AO REDOR DO TEXTO*/
@@ -94,5 +91,6 @@ input[type="text"] {
     height: 20px;
     width: 300px;
     transform: translate(15%);
+
 }
 
